--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
@@ -1,25 +1,43 @@
-﻿
+﻿@using DartsScoreboardGames.Infrastructure.Services
+@using DartsScoreboardGames.Services.Models
+
 @inject GameStateProvider GameStateProvider
 @inject AvatarImageProvider AvatarImageProvider
+@inject PlayerHistoryService PlayerHistoryService
 
 <div>
-    <MudDialog>
+    <MudDialog >
         <DialogContent>
             <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
-                <MudTabPanel Text="Existing">
-                    @foreach (var player in ExistingPlayers) {
-                        <MudButton OnClick="@(async () => await AddPlayer(player))">@player.Name</MudButton>
-                    }
-                </MudTabPanel>
+                @if (ExistingPlayers.Any()) {
+                    <MudTabPanel Text="Existing">
+                        @foreach (var player in ExistingPlayers) {
+                            <PlayerDisplay Player=player OnCrossClick=@(() => RemovePlayer(player)) OnSelect=@(() => AddPlayer(player)) />
+                        }
+                    </MudTabPanel>
+                }
                 <MudTabPanel Text="Create New">
-                    @foreach (var item in AvatarImageProvider.Avatars)
-                    {
-                        <MudAvatar>
-                            <MudImage Src=@item ></MudImage>
-                        </MudAvatar>
-                    }
-                    <MudTextField @bind-Value="NewPlayerName" Label="Name" Variant="Variant.Text"></MudTextField>
-                    <MudButton OnClick="@(async () => await AddPlayer(new(NewPlayerName)))">Add</MudButton>
+                      <MudExpansionPanels Elevation="0">
+                        <MudExpansionPanel @bind-Expanded=@avatarPanelOpen HideIcon=true>
+                            <TitleContent>
+                                <MudAvatar Size="Size.Large">
+                                    <MudImage Src=@NewAvatar></MudImage>
+                                 </MudAvatar>
+                            </TitleContent>
+                            <ChildContent>
+                                @foreach (var item in AvatarImageProvider.Avatars) {
+                                    <MudAvatar Style="cursor:pointer;" Class="mx-1 mt-1" Size="Size.Medium" @onclick="@(async () => {
+                                        NewAvatar = item;
+                                        avatarPanelOpen = false;
+                                    })">
+                                        <MudImage Src=@item ></MudImage>
+                                    </MudAvatar>
+                                }
+                            </ChildContent>
+                        </MudExpansionPanel>
+                    </MudExpansionPanels>
+                    <MudTextField Immediate=true @bind-Value="NewPlayerName" Label="Name" Variant="Variant.Text"></MudTextField>
+                    <MudButton Disabled=@(string.IsNullOrEmpty(NewPlayerName)) OnClick="@(async () => await AddPlayer())">Add</MudButton>
                 </MudTabPanel>
             </MudTabs>
         </DialogContent>
@@ -29,20 +47,32 @@
 
 @code{
     [CascadingParameter]
-    private MudDialog? Me { get; set; }
+    private IMudDialogInstance? Me { get; set; }
 
+    private List<Player> ExistingPlayers = [];
 
-    private Player[] ExistingPlayers = [
-        new("Louie"),
-        new("Also Louie")
-    ];
+    bool avatarPanelOpen;
 
     public string NewPlayerName { get; set; } = default!;
     public string NewAvatar { get; set; } = default!;
 
-
-    private async Task AddPlayer(Player player) {
-        GameStateProvider.AddPlayer(player);
-        await Me?.CloseAsync();
+    protected override async Task OnInitializedAsync() {
+        NewAvatar = AvatarImageProvider.Avatars.First();
+        ExistingPlayers = await PlayerHistoryService.GetHistoricPlayersAsync();
     }
+
+    private async Task AddPlayer(Player? player = null) {
+        player ??= new(NewPlayerName, NewAvatar);
+        NewPlayerName = NewAvatar = default!;
+        await PlayerHistoryService.AddPlayerHistoryAsync(player);
+        GameStateProvider.AddPlayer(player);
+        Me?.Close();
+    }
+
+    private async Task RemovePlayer(Player player) {
+        await PlayerHistoryService.RemovePlayerFromHistoryAsync(player);
+        ExistingPlayers = await PlayerHistoryService.GetHistoricPlayersAsync();
+        StateHasChanged();
+    }
+
 }
