--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/GameCard.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/GameCard.razor
@@ -4,13 +4,11 @@
 
 @inject GameStateProvider GameStateProvider
 
-<MudCard Class="pa-5 mx-10"  >
+<MudCard Class="pa-5 mx-10">
     <MudText Align=Align.Center Typo="Typo.h3">@TGame.Name</MudText>
-    <MudImage class="mx-auto my-5" Src="assets/dartboard.png" Height="100" Width="100" />
+    <MudImage class="mx-auto my-5" Src=@TGame.Logo Height="250" Width="250" />
     <MudText Class="my-5" Align=Align.Center Typo="Typo.body1">@TGame.Description</MudText>
-    <MudButton Class="@("mx-auto " + (TGame.PlayerRequirement > 1 ? "" : "mb-10"))" Style="width: 10em" Onclick=@(() => GameStateProvider.SetGameScreen<TGame>()) Disabled=@(GameStateProvider.Players.Count < TGame.PlayerRequirement)>Start Game</MudButton>
-    @if (TGame.PlayerRequirement > 1) {
-        <MudText class="mt-5" Align=Align.Center Typo="Typo.caption">@($"{TGame.PlayerRequirement}+ Players")</MudText>
-    }
+    <MudButton Variant=Variant.Filled Class="mx-auto" Style="width: 10em" Onclick=@(() => GameStateProvider.SetGameScreen<TGame>()) Disabled=@(GameStateProvider.Players.Count < TGame.PlayerRequirement)>Start Game</MudButton>
+    <MudText class="mt-5" Align=Align.Center Typo="Typo.caption">@($"{TGame.PlayerRequirement}+ Players")</MudText>
 </MudCard>
 
