--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
@@ -6,17 +6,17 @@
 @inject PlayerHistoryService PlayerHistoryService
 
 <div>
-    <MudDialog >
+    <MudDialog Style="width: 50vw;" >
         <DialogContent>
             <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
                 @if (ExistingPlayers.Any()) {
-                    <MudTabPanel Text="Existing">
+                    <MudTabPanel Text="Recent">
                         @foreach (var player in ExistingPlayers) {
-                            <PlayerDisplay Player=player OnCrossClick=@(() => RemovePlayer(player)) OnSelect=@(() => AddPlayer(player)) />
+                            <PlayerDisplay Class="mb-5" Player=player OnCrossClick=@(() => RemovePlayer(player)) OnSelect=@(() => AddPlayer(player)) />
                         }
                     </MudTabPanel>
                 }
-                <MudTabPanel Text="Create New">
+                <MudTabPanel Text="New Player">
                       <MudExpansionPanels Elevation="0">
                         <MudExpansionPanel @bind-Expanded=@avatarPanelOpen HideIcon=true>
                             <TitleContent>
@@ -25,19 +25,21 @@
                                  </MudAvatar>
                             </TitleContent>
                             <ChildContent>
-                                @foreach (var item in AvatarImageProvider.Avatars) {
-                                    <MudAvatar Style="cursor:pointer;" Class="mx-1 mt-1" Size="Size.Medium" @onclick="@(async () => {
-                                        NewAvatar = item;
-                                        avatarPanelOpen = false;
-                                    })">
-                                        <MudImage Src=@item ></MudImage>
-                                    </MudAvatar>
-                                }
+                                <div class="d-flex flex-row flex-wrap" style="max-width: 50vw;">
+                                    @foreach (var item in AvatarImageProvider.Avatars) {
+                                        <MudAvatar Style="cursor:pointer;" Class="mx-1 mt-3" Size="Size.Medium" @onclick="@(async () => {
+                                            NewAvatar = item;
+                                            avatarPanelOpen = false;
+                                        })">
+                                            <MudImage Src=@item ></MudImage>
+                                        </MudAvatar>
+                                    }
+                                </div>
                             </ChildContent>
                         </MudExpansionPanel>
                     </MudExpansionPanels>
-                    <MudTextField Immediate=true @bind-Value="NewPlayerName" Label="Name" Variant="Variant.Text"></MudTextField>
-                    <MudButton Disabled=@(string.IsNullOrEmpty(NewPlayerName)) OnClick="@(async () => await AddPlayer())">Add</MudButton>
+                    <MudTextField Immediate=true @bind-Value="NewPlayerName" Label="Name" Variant="Variant.Text" Class="my-5"></MudTextField>
+                    <MudButton Disabled=@(string.IsNullOrEmpty(NewPlayerName)) OnClick="@(async () => await AddPlayer())" Variant="Variant.Filled">Add</MudButton>
                 </MudTabPanel>
             </MudTabs>
         </DialogContent>
