--- a/src/DartsScoreboardGames/Components/App.razor
+++ b/src/DartsScoreboardGames/Components/App.razor
@@ -9,6 +9,23 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <link rel="stylesheet" href="@Assets["DartsScoreboardGames.styles.css"]" />
+    <style>
+        .mud-card.game-card {
+            transition: height 0.4s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.4s;
+            height: 10vh;
+            box-shadow: none;
+        }
+
+            .mud-card.game-card.active {
+                height: 15vh;
+                box-shadow: 0 10px 28px rgba(0,0,0,0.18);
+                z-index: 1;
+            }
+
+            .mud-card.game-card.dead {
+                opacity: 35%
+            }
+    </style>
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
